# fileManagerPractica1Distribuidos

./: CMakeLists.txt  Makefile  NEWCMakeLists.txt  README.md  client.cpp  fileManager  fileOperations.h  filemanager.h  server.cpp  utils.h
dirprueba/: dummy.txt
